[package]
name = "lesson_14"
version = "0.29.0"
authors = ["taidaesal"]
edition = "2021"

[dependencies]
png = "0.17.2"
vulkano = "0.29.0"
winit = "0.26.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
nalgebra-glm = "0.16.0"
