[package]
name = "lesson_9"
version = "0.29.0"
authors = ["taidaesal"]
edition = "2021"

[dependencies]
vulkano = "0.29.0"
winit = "0.26.0"
vulkano-win = "0.29.0"
vulkano-shaders = "0.29.0"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
nalgebra-glm = "0.16.0"
model_loader = { path = "../../model_loader" }